devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
//设置速度模式目标速度
MT_API int32_t __stdcall MT_Set_Axis_Velocity_V_Target_Abs(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_V_Target_Abs(int32_t ADev,uint16_t AObj,int32_t Value);
//设置速度模式目标速度
MT_API int32_t __stdcall MT_Set_Axis_Velocity_V_Target_Rel(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_V_Target_Rel(int32_t ADev,uint16_t AObj,int32_t Value);
//停止速度模式
MT_API int32_t __stdcall MT_Set_Axis_Velocity_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_Stop(int32_t ADev,uint16_t AObj);
//读取位置模式最大速度
MT_API int32_t __stdcall MT_Get_Axis_Position_V_Max(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_V_Max(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置位置模式最大速度
MT_API int32_t __stdcall MT_Set_Axis_Position_V_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_V_Max(int32_t ADev,uint16_t AObj,int32_t Value);
//读取位置模式目标
MT_API int32_t __stdcall MT_Get_Axis_Position_P_Target(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_P_Target(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置位置模式目标
MT_API int32_t __stdcall MT_Set_Axis_Position_P_Target_Abs(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_P_Target_Abs(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Position_P_Target_Rel(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_P_Target_Rel(int32_t ADev,uint16_t AObj,int32_t Value);
//停止位置模式
MT_API int32_t __stdcall MT_Set_Axis_Position_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Stop(int32_t ADev,uint16_t AObj);
//设置编码器比例,用在减速判断上
MT_API int32_t __stdcall MT_Set_Axis_Position_Close_Dec_Factor(uint16_t AObj,float AFactor);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Close_Dec_Factor(int32_t ADev,uint16_t AObj,float AFactor);
//紧急停止
MT_API int32_t __stdcall MT_Set_Axis_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Halt(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Halt_All(void);
MT_API int32_t __stdcall MT_M_Set_Axis_Halt_All(int32_t ADev);
//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
MT_API int32_t __stdcall MT_Get_Axis_V_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_V_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
//读取当前软件位置
MT_API int32_t __stdcall MT_Get_Axis_P_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_P_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Software_P_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Software_P_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Software_P(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Software_P(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置软件位置
MT_API int32_t __stdcall MT_Set_Axis_P_Now(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_P_Now(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Software_P(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_P(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Software_P_Now(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_P_Now(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Axis_Status(uint16_t AObj,uint8_t* pRun,uint8_t* pDir,uint8_t* pNeg,uint8_t* pPos,uint8_t* pZero,uint8_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status(int32_t ADev,uint16_t AObj,uint8_t* pRun,uint8_t* pDir,uint8_t* pNeg,uint8_t* pPos,uint8_t* pZero,uint8_t* pMode);
MT_API int32_t __stdcall MT_Get_Axis_Status2(uint16_t AObj,int32_t* pRun,int32_t* pDir,int32_t* pNeg,int32_t* pPos,int32_t* pZero,int32_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status2(int32_t ADev,uint16_t AObj,int32_t* pRun,int32_t* pDir,int32_t* pNeg,int32_t* pPos,int32_t* pZero,int32_t* pMode);
MT_API int32_t __stdcall MT_Get_Axis_Status_Run(uint16_t AObj,int32_t* pRun);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Run(int32_t ADev,uint16_t AObj,int32_t* pRun);
MT_API int32_t __stdcall MT_Get_Axis_Status_Dir(uint16_t AObj,int32_t* pDir);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Dir(int32_t ADev,uint16_t AObj,int32_t* pDir);
MT_API int32_t __stdcall MT_Get_Axis_Status_Neg(uint16_t AObj,int32_t* pNeg);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Neg(int32_t ADev,uint16_t AObj,int32_t* pNeg);
MT_API int32_t __stdcall MT_Get_Axis_Status_Pos(uint16_t AObj,int32_t* pPos);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Pos(int32_t ADev,uint16_t AObj,int32_t* pPos);
MT_API int32_t __stdcall MT_Get_Axis_Status_Zero(uint16_t AObj,int32_t* pZero);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Zero(int32_t ADev,uint16_t AObj,int32_t* pZero);
MT_API int32_t __stdcall MT_Get_Axis_Status_Mode(uint16_t AObj,int32_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Mode(int32_t ADev,uint16_t AObj,int32_t* pMode);
//设置0位模式
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Home_Switch(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Home_Switch(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Encoder_Index(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Encoder_Index(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Encoder_Home_Switch(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Encoder_Home_Switch(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Home_Home_Zero(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Home_Home_Zero(int32_t ADev,uint16_t AObj);