devices/MRE_Controller_Data_Package/WIN32/MT_API.cs


//设置速度模式目标速度
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_V_Target_Abs(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Velocity_V_Target_Abs(Int32 ADev,UInt16 AObj,Int32 Value);

//设置速度模式目标速度
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_V_Target_Rel(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Velocity_V_Target_Rel(Int32 ADev,UInt16 AObj,Int32 Value);

//停止速度模式
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Velocity_Stop(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Velocity_Stop(Int32 ADev,UInt16 AObj);

//读取位置模式最大速度
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Position_V_Max(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Position_V_Max(Int32 ADev,UInt16 AObj,ref Int32 pValue);

//设置位置模式最大速度
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_V_Max(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Position_V_Max(Int32 ADev,UInt16 AObj,Int32 Value);

//读取位置模式目标
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Position_P_Target(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Position_P_Target(Int32 ADev,UInt16 AObj,ref Int32 pValue);

//设置位置模式目标
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_P_Target_Abs(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Position_P_Target_Abs(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_P_Target_Rel(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Position_P_Target_Rel(Int32 ADev,UInt16 AObj,Int32 Value);

//停止位置模式
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_Stop(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Position_Stop(Int32 ADev,UInt16 AObj);

//设置编码器比例,用在减速判断上
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Position_Close_Dec_Factor(UInt16 AObj,Single AFactor);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Position_Close_Dec_Factor(Int32 ADev,UInt16 AObj,Single AFactor);

//紧急停止
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Halt(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Halt(Int32 ADev,UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Halt_All();

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Halt_All(Int32 ADev);

//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_V_Now(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_V_Now(Int32 ADev,UInt16 AObj,ref Int32 pValue);

//读取当前软件位置
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_P_Now(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_P_Now(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Software_P_Now(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Software_P_Now(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Software_P(UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Software_P(Int32 ADev,UInt16 AObj,ref Int32 pValue);

//设置软件位置
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_P_Now(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_P_Now(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_P(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Software_P(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_P_Now(UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Software_P_Now(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status(UInt16 AObj,ref Byte pRun,ref Byte pDir,ref Byte pNeg,ref Byte pPos,ref Byte pZero,ref Byte pMode);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status(Int32 ADev,UInt16 AObj,ref Byte pRun,ref Byte pDir,ref Byte pNeg,ref Byte pPos,ref Byte pZero,ref Byte pMode);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status2(UInt16 AObj,ref Int32 pRun,ref Int32 pDir,ref Int32 pNeg,ref Int32 pPos,ref Int32 pZero,ref Int32 pMode);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status2(Int32 ADev,UInt16 AObj,ref Int32 pRun,ref Int32 pDir,ref Int32 pNeg,ref Int32 pPos,ref Int32 pZero,ref Int32 pMode);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Run(UInt16 AObj,ref Int32 pRun);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Run(Int32 ADev,UInt16 AObj,ref Int32 pRun);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Dir(UInt16 AObj,ref Int32 pDir);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Dir(Int32 ADev,UInt16 AObj,ref Int32 pDir);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Neg(UInt16 AObj,ref Int32 pNeg);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Neg(Int32 ADev,UInt16 AObj,ref Int32 pNeg);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Pos(UInt16 AObj,ref Int32 pPos);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Pos(Int32 ADev,UInt16 AObj,ref Int32 pPos);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Zero(UInt16 AObj,ref Int32 pZero);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Zero(Int32 ADev,UInt16 AObj,ref Int32 pZero);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Status_Mode(UInt16 AObj,ref Int32 pMode);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Get_Axis_Status_Mode(Int32 ADev,UInt16 AObj,ref Int32 pMode);

//设置0位模式
[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Mode_Home(Int32 ADev,UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Home_Switch(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Mode_Home_Home_Switch(Int32 ADev,UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Encoder_Index(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Mode_Home_Encoder_Index(Int32 ADev,UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Encoder_Home_Switch(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Mode_Home_Encoder_Home_Switch(Int32 ADev,UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Home_Zero(UInt16 AObj);

[DllImport("MT_API.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_M_Set_Axis_Mode_Home_Home_Zero(Int32 ADev,UInt16 AObj);
